--- a/man/man1/fishfood.1
+++ b/man/man1/fishfood.1
@@ -136,7 +136,7 @@ see "A Large-Scale Study of File-System Contents" by John R. Douceur and William
 Written by Dr. Alistair Ward.
 .SH BUGS
 .SS "REPORTING BUGS"
-Report bugs to <\fBfishfood@functionalley.eu\fR>.
+Report bugs to <\fBfishfood@functionalley.com\fR>.
 .SH COPYRIGHT
 Copyright \(co 2013-2015 Dr. Alistair Ward
 .PP
@@ -147,7 +147,7 @@ This program is distributed in the hope that it will be useful, but WITHOUT ANY 
 You should have received a copy of the GNU General Public License along with this program. If not, see \fB<https://www.gnu.org/licenses/>\fR.
 .SH "SEE ALSO"
 .IP \(bu
-Home-page: \fBhttps://functionalley.eu\fR
+Home-page: \fBhttps://functionalley.com\fR
 .IP \(bu
 .B https://hackage.haskell.org/package/fishfood
 .IP \(bu
